assets/css/main.scss
/* ... */
video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

body.fullscreen video, #videoOuter:fullscreen video {
  object-fit: contain;
}

#switcher {
  $width: 26px;
  $height: 68px;

  position: absolute;
  position: sticky;
  top: calc(50vh - $height / 2);
  left: 0;
  height: 0;
  overflow: visible;
  touch-action: pan-x;

  div {
    margin-left: calc($width / -2);
    width: 0;
    height: 0;
    user-select: none;
    background-image: url("/images/switcher.svg");
    background-repeat: no-repeat;
    background-position: center center;
    width: $width;
    height: $height;
    touch-action: pan-x;
    background-size: cover;
  }
}

a.header {
  color: #fff;
  line-height: 2em;
  display: block;
  background: $darkBg;
  text-align: center;
  font-weight: bold;
  font-size: 1.6em;
  text-decoration: none !important;
}

$iconSize: 1.5em;
$iconBorder: 0.13em;
.icon {
  height: $iconSize;
  display: inline-block;
  line-height: $iconSize;
  margin-top: -0.35em;
  margin-bottom: -0.15em;
  font-size: 90%;
  font-weight: normal;
  text-decoration: none;
  text-align: center;
  vertical-align: middle;
  color: #fff !important;
  cursor: default;
  border: $iconBorder solid white;
  text-shadow: -0.05em 0.05em 0 rgba(0, 0, 0, 0.2),
    0.05em 0.05em 0 rgba(0, 0, 0, 0.2), 0.05em -0.05em 0 rgba(0, 0, 0, 0.2),
    -0.05em -0.05em 0 rgba(0, 0, 0, 0.2);

  &.freizeit {
    border-radius: 0.2rem;
    padding: 0 0.2rem;
  }

  &.alltag {
    border-radius: 50%;
    width: 1.5em;
  }

  &.rsw {
    display: none;
  }
}

h3 .icon {
  outline: 1px solid #eee;
  float: right;
  margin-top: -0.2rem;
  pointer-events: none;
  cursor: normal;
}

.icon, .fricon {
  color: #fff !important;
  cursor: default;
  border: 0.13em solid white;
  text-shadow: -0.05em 0.05em 0 rgba(0, 0, 0, 0.2),
    0.05em 0.05em 0 rgba(0, 0, 0, 0.2), 0.05em -0.05em 0 rgba(0, 0, 0, 0.2),
    -0.05em -0.05em 0 rgba(0, 0, 0, 0.2);
}


a.icon {
  cursor: pointer;

  &:hover {
    text-decoration: none;
    font-weight: bold;
  }
}

abbr {
  cursor: help;
  text-decoration: underline dotted;
}


h3,
h4 {
  margin-top: 1em;
}

h3 {
  font-size: 1.1rem;
}

h4 {
  font-size: 1.0rem;
}

h5 {
  margin-top: 0.5em;
  font-size: 0.9rem;
  font-weight: normal;
  font-style: italic;
}

h3:first-child + .duration {
  color: #888;
  font-style: italic;
  display: block;
  margin-top: 0.4em;
}

time.updated {
  color: #888;
  text-align: right;
  font-style: italic;
  display: block;
}

span.updated {
  color: #888;
  font-style: italic;
  display: block;
  padding-top: 0.1rem;
}

ul,
ol {
  padding-left: 0.85rem;
  line-height: 120%;
  margin-top: 0.6rem;

  li {
    margin-bottom: 0.4rem;
  }

  .duration {
    color: #999;
    float: right;
    padding-left: .5em;
  }
}

ol.route-list {
  list-style-type: none;
  padding: 0;
  columns: 2;
  column-gap: 0.5rem;

  li {
    margin: 0;
    margin-bottom: 0.5rem;
    clear: all;
    break-inside: avoid-column;
  }

  a:hover {
    span {
      text-decoration: inherit;
      &.icon {
        text-decoration: none;
      }
    }
  }

  span {
    display: inline-block;
    vertical-align: middle;
    line-height: 1.45rem;
  }

  span.freizeit {
    width: 2.5em;
  }

  span.freizeit + span {
    width: calc(100% - 3.3em);
  }

  span.alltag + span {
    width: calc(100% - $iconSize - 2*$iconBorder - 0.2em);
  }

  span + span {
    margin-left: 0.3em;
  }

  .icon {
    cursor: pointer;
    text-decoration: none !important;
    margin-top: -0.16em;
  }
}


li.separator {
  margin-top: 1rem;
  font-weight: bold;
  list-style-type: '';
  margin-left: -0.85rem;

  &:first-child {
    display: none;
  }
}


ol.hide-bullets {
  list-style-type: none;
  padding: 0;

  time {
    width: 4em;
    display: inline-block;
  }

  a {
    width: calc(100% - 4.5em);
    display: inline-block;
  }

  li.separator {
    margin-left: 0;
  }

  li {
    clear: both;
  }

  &:after {
    content: ".";
    visibility: hidden;
    display: block;
    height: 0;
    clear: both;
  }
}

p {
  text-align: justify;
  margin-top: 0.6rem;
}

h5 + p {
  margin-top: 0.25rem;
}

a {
  color: #0366d6;
  text-decoration: none;
  cursor: pointer;

  &:hover {
    text-decoration: underline;
  }

  &.ref {
    font-style: italic;
    text-decoration-style: dotted;
    cursor: help;
  }
}

#impressum {
  margin-top: 2em;
  float: right;

  a {
    color: #888;
  }
}

#indicator,
#indicator-rotate {
  height: 2em;
  width: 2em;
  pointer-events: none;

  &.animate {
    // NOTE: also update timeout in map.js
    transition: linear 0.3s;
  }
}

#ping-indicator {
  background: #f47474;
  border-radius: 100%;
  width: 1em;
  height: 1em;
  border: 0.2em solid #fff;
  outline: 0.1em solid #000000a1;
  pointer-events: none;
  transition-property: opacity;
  opacity: 1;
  // keep in sync with map.js
  transition-delay: 10s;
  transition-duration: 3s;
  transition-timing-function: linear;
  margin-left: 0.5em;
  margin-top: 0.5em;
}

#indicator-loc {
  background: rgba(255, 255, 255, 0.5);
  border-radius: 0.8em;
  border: 0.2em solid #000;
  box-shadow: 0 0 0.1em 0.1em #fff;
  height: 0.8em;
  left: 50%;
  position: absolute;
  color: #000;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 0.8em;
}

#indicator-dir {
  &::before {
    content: '▴';
    font-size: 1.3em; // adjust translateY below as needed
  }

  height: 2em;
  left: 50%;
  position: relative;
  top: 0%;
  text-align: center;
  text-shadow: 0.1em 0.0em 0.1em #fff,
  0.1em -0.1em 0.1em #fff,
  -0.1em 0.0em 0.1em #fff,
  -0.1em -0.1em 0.1em #fff;
  transform: translate(-50%, -45%);
  width: 2em;
  z-index: 10;
}

img.roaddiagram {
  width: 100%;
  max-width: 25rem;
  max-height: 50%;
  object-fit: contain;
  height: auto;
  margin: 0.8rem auto;
  display: block;
}

p.alert {
  background: #ECD0D0;
  padding: $contentPad;
  margin: 0 calc(-1*$contentPad);
}
/* ... */

